Add class to markup

--- a/components.html
+++ b/components.html
@@ -667,7 +667,7 @@
       <section id="title-path-parent" data-category="Form elements" class="component">
         <h2>Title, Path &amp; Parent</h2>
         <div class="preview">
-          <form>
+          <form class="page">
             <label for="title">Title</label>
             <input id="title" name="title" type="text" placeholder="What do you want to write about?" />
             <label for="path">
@@ -685,7 +685,7 @@
         </div>
         <details class="markup">
           <summary>Example markup</summary>
-          <code class="language-markup">&lt;form&gt;
+          <code class="language-markup">&lt;form class="page"&gt;
   &lt;label for="title"&gt;Title&lt;/label&gt;
   &lt;input id="title" name="title" type="text" placeholder="What do you want to write about?" /&gt;
   &lt;label for="path"&gt;
