Don't really need dynamic instructions

--- a/components.html
+++ b/components.html
@@ -677,7 +677,7 @@
             <input id="path" name="path" type="text" placeholder="/example" />
             <label for="parent">
               Parent
-              <p class="note">Should this page belong to another one? <span class="instructions">If so, provide the path to that other page here.</span></p>
+              <p class="note">Should this page belong to another one? If so, provide the path to that other page here.</p>
             </label>
             <input id="parent" name="parent" type="text" />
             <button>Create Page</button>
