Move Collapsible to Content
If we're going to have enough interactive content components to warrant its own group, we certainly don't have it yet.

--- a/components.html
+++ b/components.html
@@ -871,7 +871,7 @@
       </section>
 
       <!-- Collapsible -->
-      <section id="collapsible" data-category="Interactive content" class="component">
+      <section id="collapsible" data-category="Content" class="component">
         <h2>Collapsible</h2>
         <div class="preview">
           <aside class="collapsible">
