Update markup: We'll need a span to mark the count
So that the JS can figure out what to update without getting into a bunch of complicated text parsing.

--- a/components.html
+++ b/components.html
@@ -813,11 +813,11 @@
         <div class="preview">
           <p class="likes">
             <a href="#like-unlike" class="like">Like</a>
-            100 likes
+            <span class="count">100</span> likes
           </p>
           <p class="likes">
             <a href="#like-unlike" class="unlike">Unlike</a>
-            101 likes
+            <span class="count">101</span> likes
           </p>
         </div>
         <details class="markup">
@@ -825,13 +825,13 @@
           <code class="language-markup">&lt;!-- Use this version when the user hasn't liked it yet --&gt;
 &lt;p class="likes"&gt;
   &lt;a href="/path/to/like/content" class="like"&gt;Like&lt;/a&gt;
-  100 likes
+  &lt;span class="count"&gt;100&lt;/span&gt; likes
 &lt;/p&gt;
 
 &lt;!-- Use this version when the user has already liked it --&gt;
 &lt;p class="likes"&gt;
   &lt;a href="/path/to/unlike/content" class="unlike"&gt;Unlike&lt;/a&gt;
-  101 likes
+  &lt;span class="count"&gt;101&lt;/span&gt; likes
 &lt;/p&gt;</code>
         </details>
         <section class="notes">
