Provide examples of link URLs

--- a/components.html
+++ b/components.html
@@ -1152,7 +1152,7 @@
       &lt;/td&gt;
       &lt;td&gt;
         An update
-        &lt;p class="details"&gt;Change made by &lt;a href="#page-history"&gt;Jason Godesky&lt;/a&gt;, &lt;a href="#page-history"&gt;24&amp;nbsp;June&amp;nbsp;2020 7:33&amp;nbsp;PM&lt;/a&gt;&lt;/p&gt;
+        &lt;p class="details"&gt;Change made by &lt;a href="/member/123"&gt;Jason Godesky&lt;/a&gt;, &lt;a href="/page/12346"&gt;24&amp;nbsp;June&amp;nbsp;2020 7:33&amp;nbsp;PM&lt;/a&gt;&lt;/p&gt;
       &lt;/td&gt;
     &lt;/tr&gt;
     &lt;tr&gt;
@@ -1164,7 +1164,7 @@
       &lt;/td&gt;
       &lt;td&gt;
         Initial text
-        &lt;p class="details"&gt;Change made by &lt;a href="#page-history"&gt;Jason Godesky&lt;/a&gt;, &lt;a href="#page-history"&gt;24&amp;nbsp;June&amp;nbsp;2020 7:27&amp;nbsp;PM&lt;/a&gt;&lt;/p&gt;
+        &lt;p class="details"&gt;Change made by &lt;a href="/member/123"&gt;Jason Godesky&lt;/a&gt;, &lt;a href="/page/12345"&gt;24&amp;nbsp;June&amp;nbsp;2020 7:27&amp;nbsp;PM&lt;/a&gt;&lt;/p&gt;
       &lt;/td&gt;
     &lt;/tr&gt;
   &lt;/tbody&gt;
