Correct misspelling in class name

--- a/components.html
+++ b/components.html
@@ -1096,7 +1096,7 @@
       <section id="page-history" data-category="Content" class="component">
         <h2>Page history</h2>
         <div class="preview">
-          <table class="historry">
+          <table class="history">
             <thead>
               <tr>
                 <th />
