Markup and documentation

--- a/components.html
+++ b/components.html
@@ -1329,6 +1329,48 @@
         </section>
       </section>
 
+      <!-- Create Something  -->
+      <section id="create-something" data-category="Content" class="component">
+        <h2>Create Something</h2>
+        <div class="preview">
+          <section class="create">
+            <h3>Create Something</h3>
+            <p>Add something new to the Fifth World.</p>
+            <ul>
+              <li><a href="#create-something" class="button">Add a Page</a></li>
+              <li><a disabled="" title="Coming soon" class="button">Add a Family</a></li>
+              <li><a disabled="" title="Coming soon" class="button">Add a Character</a></li>
+              <li><a disabled="" title="Coming soon" class="button">Add a Place</a></li>
+              <li><a disabled="" title="Coming soon" class="button">Write a Story</a></li>
+              <li><a href="#create-something" class="button">Upload a File</a></li>
+              <li><a disabled="" title="Coming soon" class="button">Upload Art</a></li>
+            </ul>
+          </section>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;section class="create"&gt;
+  &lt;h3&gt;Create Something&lt;/h3&gt;
+  &lt;p&gt;Add something new to the Fifth World.&lt;/p&gt;
+  &lt;ul&gt;
+    &lt;li&gt;&lt;a href="https://thefifthworld.com/new" class="button"&gt;Add a Page&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a disabled="" title="Coming soon" class="button"&gt;Add a Family&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a disabled="" title="Coming soon" class="button"&gt;Add a Character&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a disabled="" title="Coming soon" class="button"&gt;Add a Place&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a disabled="" title="Coming soon" class="button"&gt;Write a Story&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href="https://thefifthworld.com/upload" class="button"&gt;Upload a File&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a disabled="" title="Coming soon" class="button"&gt;Upload Art&lt;/a&gt;&lt;/li&gt;
+  &lt;/ul&gt;
+&lt;/section&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>We use this component to present members with their options for creating new pages on the Fifth World website.</li>
+            <li>Currently, we have the basic new page and file upload versions available. We&rsquo;ll add specialized forms for other types of content over time, and update this component&rsquo;s markup to link to those as they become available.</li>
+          </ul>
+        </section>
+      </section>
+
     </main>
     <script src="js/bundle.js"></script>
     <script src="js/prism.js"></script>
