--- a/components.html
+++ b/components.html
@@ -1382,7 +1382,7 @@
         <section class="notes">
           <ul>
             <li>We use this component to present the options that members have to administer their accounts on the dashboard page.</li>
-            <li>You can reuse this component when you have exactly four actions, and each one requires a bit more explanation than what you can fit on a button.</li>
+            <li>You can reuse this component when you have several actions to present and each one requires a bit more explanation than what you can fit on a button.</li>
           </ul>
         </section>
       </section>
