--- a/components.html
+++ b/components.html
@@ -1455,6 +1455,63 @@
         </section>
       </section>
 
+      <!-- Artist listing -->
+      <section id="artist-listing" data-category="Media" class="component">
+        <h2>Artist listing</h2>
+        <div class="preview">
+          <section class="artist">
+            <h2>
+              <a href="#artist-listing">Giulianna Maria Lamanna</a>
+            </h2>
+            <ul class="thumbnails">
+              <li>
+                <a href="#artist-listing">
+                  <img src="https://s3.us-east-1.amazonaws.com/thefifthworld/uploads/wormwood1400.20190916.210914.256x256.jpg" alt="Vulture Priest with Raycat, by Giulianna Maria Lamanna" />
+                </a>
+              </li>
+              <li>
+                <a href="#artist-listing">
+                  <img src="https://s3.us-east-1.amazonaws.com/thefifthworld/uploads/shaman.20190902.173209.256x256.jpg" alt="Wizard, by Giulianna Maria Lamanna" />
+                </a>
+              </li>
+              <li>
+                <a href="#artist-listing">
+                  <img src="https://s3.us-east-1.amazonaws.com/thefifthworld/uploads/knife.20190902.173122.256x256.jpg" alt="Knife, by Giulianna Maria Lamanna" />
+                </a>
+              </li>
+              <li>
+                <a href="#artist-listing">
+                  <img src="https://s3.us-east-1.amazonaws.com/thefifthworld/uploads/bag.20190902.173017.256x256.jpg" alt="Bag, by Giulianna Maria Lamanna" />
+                </a>
+              </li>
+            </ul>
+          </section>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;section class="artist"&gt;
+  &lt;h2&gt;
+    &lt;a href="/path/to/artist/page"&gt;Artist Name&lt;/a&gt;
+  &lt;/h2&gt;
+  &lt;ul class="thumbnails"&gt;
+    &lt;!-- Repeat the &lt;li&gt; element for each thumbnail in your gallery --&gt;
+    &lt;li&gt;
+      &lt;a href="/path/to/image/page"&gt;
+        &lt;img src="/path/to/thumbnail" alt="Title of Work, Artist Name" /&gt;
+      &lt;/a&gt;
+    &lt;/li&gt;
+  &lt;/ul&gt;
+&lt;/section&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>This component works especially well when you repeat it to show several artists, along with glimpses of their work.</li>
+            <li>This component uses the <a href="#thumbnail-gallery">thumbnail gallery</a> component and expands it a bit, adding a unique heading that helps to separate the work of different artists.</li>
+            <li>The markup presented here assumes that each artist has a gallery page, and that you will link to them from their headings, but it can also work without those links. Wherever possible, though, do provide links so that users can see more of the artist&rsquo;s work.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Video -->
       <section id="video" data-category="Media" class="component">
         <h2>Video</h2>
