--- a/components.html
+++ b/components.html
@@ -1370,7 +1370,7 @@
       <section id="img" data-category="Media" class="component">
         <h2>Image</h2>
         <div class="preview">
-          <img src="/img/forest.jpg" alt="The Suburban Forest, by Nick Pedersen" />
+          <img src="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/img/forest.jpg" alt="The Suburban Forest, by Nick Pedersen" />
         </div>
         <details class="markup">
           <summary>Example markup</summary>
@@ -1389,7 +1389,7 @@
         <h2>Figure</h2>
         <div class="preview">
           <figure>
-            <img src="/img/forest.jpg" alt="The Suburban Forest, by Nick Pedersen" />
+            <img src="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/img/forest.jpg" alt="The Suburban Forest, by Nick Pedersen" />
             <figcaption class="numbered">&ldquo;The Suburban Forest&rdquo; by <a href="https://nick-pedersen.com/">Nick Pedersen</a></figcaption>
           </figure>
         </div>
