--- a/instructions.html
+++ b/instructions.html
@@ -6,7 +6,7 @@
     <link rel=”mask-icon” href=”https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/icons/favicon.svg” color=”#000000" />
     <link rel="apple-touch-icon" href="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/img/apple-touch-icon.png" />
     <link rel="stylesheet" media="all" href="/css/prism.css" />
-    <link rel="stylesheet" media="all" href="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/style.1.0.0.css" />
+    <link rel="stylesheet" media="all" href="/css/style.css" />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -81,7 +81,7 @@ npm start</code></pre>
       <h2>Finding help on Discord</h2>
       <p>If you want to use the design system for your own project or make contributions to the design system itself but you don&rsquo;t have an account as a member of the Fifth World website, you definitely deserve one! <a href="https://thefifthworld.com/about/membership">Let us know</a> and we&rsquo;ll make sure that you get an invitation. Yuor membership will include access to the official Fifth World Discord server. The <code>#design</code> channel there exists for people who have questions or comments about this design system. We&rsquo;ll happily answer all of your questions there and help you through the process.</p>
     </main>
-    <script src="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/bundle.1.0.0.js"></script>
+    <script src="js/bundle.js"></script>
     <script src="js/prism.js"></script>
   </body>
 </html>
