Document social media icons

--- a/foundations.html
+++ b/foundations.html
@@ -206,6 +206,14 @@
             </tr>
           </tbody>
         </table>
+        <p>We also have a selection of social media icons that we use on member profile pages, so that members can direct visitors to their social media accounts and websites (<em>see</em> the <a href="components.html#social-media">social media links</a> component).</p>
+        <div style="overflow: auto;">
+          <img src="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/icons/social/facebook.svg" alt="Facebook" style="float: left; height: 5em; margin: 0 1em 1em 0; width: 5em;" />
+          <img src="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/icons/social/twitter.svg" alt="Twitter" style="float: left; height: 5em; margin: 0 1em 1em 0; width: 5em;" />
+          <img src="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/icons/social/github.svg" alt="GitHub" style="float: left; height: 5em; margin: 0 1em 1em 0; width: 5em;" />
+          <img src="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/icons/social/patreon.svg" alt="Patreon" style="float: left; height: 5em; margin: 0 1em 1em 0; width: 5em;" />
+          <img src="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/icons/social/web.svg" alt="Web site" style="float: left; height: 5em; margin: 0 1em 1em 0; width: 5em;" />
+        </div>
       </section>
     </main>
   <script src="js/bundle.js"></script>
