--- a/components.html
+++ b/components.html
@@ -79,7 +79,7 @@
         <section class="notes">
           <ul>
             <li>Use <a href="#link">links</a> to <em>go somewhere</em>. Use buttons to <em>do something</em>.</li>
-            <li>Use a <a href="button-list">button list</a> to present a selection of buttons, but never place two regular buttons too close to one another. Decide which commits the <em>primary</em> action we expect a user to need, and make all of the other buttons secondary.</li>
+            <li>Use a <a href="#button-list">button list</a> to present a selection of buttons, but never place two regular buttons too close to one another. Decide which commits the <em>primary</em> action we expect a user to need, and make all of the other buttons secondary.</li>
           </ul>
         </section>
       </section>
